<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SearchActivity"
    android:id="@+id/activity_search_constraintLayout"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_activity_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Search Articles"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_search"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/Search_query_term"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_activity_search" />


    <RelativeLayout
        android:id="@+id/begin_date_contener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText_search"
        app:layout_constraintStart_toStartOf="@+id/editText_search"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:id="@+id/title_begin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Begin_date"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/begin_date_for_spinner"
            />
        <TextView
            android:id="@+id/begin_date_for_spinner"
            android:layout_width="148dp"
            android:layout_height="44dp"
            android:layout_below="@+id/title_begin_date"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/spinner_hint"
            android:textSize="18sp"
            android:textStyle="normal"
            android:theme="@style/Widget.AppCompat.EditText"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/title_begin_date" />

        <ImageButton
            android:id="@+id/button_begin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/begin_date_for_spinner"
            android:layout_alignEnd="@+id/begin_date_for_spinner"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="0dp"
            android:background="@color/white"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"
            app:layout_constraintTop_toTopOf="@+id/begin_date_for_spinner" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/end_date_contener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_search"
        app:layout_constraintEnd_toEndOf="@+id/editText_search"
        tools:layout_editor_absoluteX="191dp"
        >
        <TextView
            android:id="@+id/title_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:text="@string/End_date"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/end_date_for_spinner"
            />
        <TextView
            android:id="@+id/end_date_for_spinner"
            android:layout_width="148dp"
            android:layout_height="44dp"
            android:layout_below="@+id/title_end_date"
            android:text="@string/spinner_hint"
            android:textSize="18sp"
            android:theme="@style/Widget.AppCompat.EditText"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_end_date"
            />

        <ImageButton
            android:id="@+id/button_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/end_date_for_spinner"
            android:layout_alignEnd="@+id/end_date_for_spinner"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="0dp"
            android:background="@color/white"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_arrow_drop_down_black_24dp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/activity_search_checkboxs_contener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/editText_search"
        app:layout_constraintRight_toRightOf="@id/editText_search"
        app:layout_constraintTop_toBottomOf="@+id/begin_date_contener">

        <CheckBox
            android:id="@+id/artsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Arts"
            app:buttonTint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/businessCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/artsCheckBox"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Business"
            app:buttonTint="@color/colorPrimary" />

        <CheckBox
            android:id="@+id/entreprenersCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/businessCheckBox"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Entrepreneurs"
            app:buttonTint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessCheckBox" />

        <CheckBox
            android:id="@+id/politicCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/artsCheckBox"
            android:layout_marginStart="145dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/artsCheckBox"
            android:text="@string/Politics"
            app:buttonTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/artsCheckBox"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/sportCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/politicCheckBox"
            android:layout_alignStart="@+id/politicCheckBox"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/Sports"
            app:buttonTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/politicCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/politicCheckBox" />

        <CheckBox
            android:id="@+id/travelCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sportCheckBox"
            android:layout_alignStart="@+id/sportCheckBox"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/Travel"
            app:buttonTint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/sportCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/sportCheckBox" />
    </RelativeLayout>

    <Button
        android:id="@+id/search_click_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:text="@string/search_activity_name"
        app:backgroundTint="@color/colorPrimary"
        app:buttonTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_search_checkboxs_contener"
        />

    <RelativeLayout
        android:id="@+id/activity_notifications_line_and_switch_contener"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_search_checkboxs_contener"
        android:layout_marginTop="28dp"
        >

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/activity_search_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/switch_compat_text"
            android:theme="@style/Theme.SwitchBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.383"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_notifications_grey_line" />
        <View
            android:id="@+id/activity_notifications_grey_line"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:background="#FF909090"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
