<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_menu"
        android:title="@string/search_activity_name"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="1"
        />

    <item
        android:title="@string/menu_notifications"
        android:id="@+id/parameters_notifications"
        app:showAsAction="never"

        />

    <item
        android:title="@string/menu_help"
        android:id="@+id/parameters_help"
        app:showAsAction="never"
        />

    <item
        android:title="@string/menu_about"
        android:id="@+id/parameters_about"
        app:showAsAction="never"
        />

</menu>

